--- a/css/main.css
+++ b/css/main.css
@@ -649,7 +649,7 @@ a{color:#fff;text-decoration:none;padding:3px;margin:-3px}
 box-shadow:         0px 0px 2px 0px rgba(0, 0, 0, 1);}
 #message{padding:20px;background-color:#F7F4F4;display:none}
 
-#results_header{text-align:left;display:none;color:#F7F4F4;padding:10px 4px;border:20px solid #BCBCBC;border-color:#BCBCBC #444349}
+#results_header{text-align:left;display:none;color:#F7F4F4;padding:10px 4px;border:20px solid #BCBCBC;border-color:#BCBCBC #2B2B2B}
 #results_options{vertical-align:middle;display:inline-block;font-size:13px;}
 .option{margin:5px 5px 5px 10px;}
 
