--- a/css/main.css
+++ b/css/main.css
@@ -668,7 +668,14 @@ table tr:last-child td{border-bottom:0;}
 .down_loaders{display:none}
 .song_img_url{background-color:#EDEDED}
 
-#footer{position:fixed;bottom:0;left:0;width:100%;height:40px;background-color:rgba(25, 25, 25, 0.5);z-index:-1}
+#footer{position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25, 25, 25, 0.8);text-align:left;height:40px;font-size:13px;overflow-x:auto;overflow-y:hidden;white-space:nowrap;}
+#social{padding:0 20px;overflow-y:hidden;}
+#social a{padding:14px 20px;display:inline-block;text-decoration:underline;}
+#social a:hover{text-decoration:none;}
+#s1:hover{background-color:#3399DD}
+#s2:hover{background-color:#DB412B}
+#s3:hover{background-color:#44619D}
+#s4:hover{background-color:#3AC672}
 
 .left{text-align:left}
 .center{text-align:center}
