--- a/css/main.css
+++ b/css/main.css
@@ -629,18 +629,17 @@ img,div{box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:bord
 a{color:#fff;text-decoration:none;padding:3px;margin:-3px}
 
 #progress{width:100%;height:10px;background-color:rgba(25, 25, 25, 0.5)}
-.bar{background-color:#60EB7B;width:0%;height:100%;}
-#spinner{display:none;padding:65px 0 40px 0}
+.bar{background-color:#fff;width:0%;height:100%;}
+#spinner{display:none;padding:60px 0 40px 0}
 
 #everything{margin:auto;max-width:900px;min-width:300px}
 .ad_box{margin:10px;}
 #main{width:100%;margin:20px 0 60px 0;}
 #main_form{height:3em;}
 #main_text,#main_button{float:left;height:3em;text-align:center;border:0;border-radius:0;margin:0;padding:0;}
-#main_text{width:70%;}
-#main_button{background-color:#212121;width:30%;color:#fff;}
-#main_button:hover{background-color:#5BD3CB}
-#main_button:active{background-color:#4BAFA9}
+#main_text{width:70%}
+#main_button{background-color:#2B9664;width:30%;color:#fff}
+#main_button:hover{background-color:#3EB880;}
 
 #hidden{display:none;visibility:hidden;}
 #kitty_img{display:none;max-width:90%;margin-top:20px;
@@ -671,7 +670,6 @@ table tr:last-child td{border-bottom:0;}
 #footer{color:#fff;position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25, 25, 25, 0.9);text-align:left;font-size:13px;overflow-x:auto;overflow-y:hidden;white-space:nowrap;}
 #social{padding:0 20px;overflow-y:hidden;display:inline}
 #info{display:inline;position:absolute;right:20px;}
-#info a:hover{background-color:white;color:black;}
 #footer a{padding:14px 20px;display:inline-block;text-decoration:underline;}
 #footer a:hover{text-decoration:none;}
 #s1:hover{background-color:#3399DD}
@@ -684,8 +682,7 @@ table tr:last-child td{border-bottom:0;}
 .right{text-align:right}
 
 @media only screen and (max-width:500px) {
-    #main_text,#info{display:none}
-    #main_button,#main_form{height:6em!important;width:100%;border:none;}
+    #info{display:none}
 }
 
 @media only screen and (max-width:900px) {
