display message when adblock is enabled

--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ a{color:#fff;text-decoration:none;padding:3px;margin:-3px}
 #main_form{height:3em;}
 #main_text,#main_button{float:left;height:3em;text-align:center;border:0;border-radius:0;margin:0;padding:0;}
 #main_text{width:65%}
-#main_button{background-color:#2B9664;width:35%;color:#fff}
-#main_button:hover{background-color:#3EB880;}
+#main_button{background-color:#2B9664;width:35%}
+#main_button:hover{background-color:#3EB880}
 
 #hidden{display:none;visibility:hidden;}
 #kitty_img{display:none;max-width:90%;margin-top:20px;
@@ -64,7 +64,8 @@ table tr:last-child td{border-bottom:0;}
 
 #donate_div form{display:block;width:100px;height:50px;margin:0 auto;}
 
-.ad_box{position:absolute;bottom:40px;left:50%;margin-left:-374px;padding:10px 10px 3px 10px;background-color:rgba(25, 25, 25, 0.9)}
+.ad_box{display:block;width:748px;height:110px;position:absolute;bottom:40px;left:50%;margin-left:-374px;padding:10px;background-color:rgba(25, 25, 25, 0.9)}
+.ad_box h4{color:#2B9664;margin:15px;}
 #footer{text-align:left;color:#fff;position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25, 25, 25, 0.9);font-size:13px;height:40px}
 #social{float:right;padding-right:10%}
 #info{padding-left:10%}
