underline anchor on hover

--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ table tr:last-child td{border-bottom:0;}
 
 .money_box{display:block;width:748px;height:110px;position:absolute;bottom:40px;left:50%;margin-left:-374px;padding:10px;background-color:rgba(25, 25, 25, 0.9)}
 .money_box h4{color:#2B9664;margin:15px;}
+.money_box a:hover{text-decoration:underline}
 #footer{text-align:left;color:#fff;position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25, 25, 25, 0.9);font-size:13px;height:40px}
 #social{float:right;padding-right:10%}
 #info{padding-left:10%}
