--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,12 @@ a{color:#fff;text-decoration:none;padding:3px;margin:-3px}
 .bar{background-color:#fff;width:0%;height:100%}
 #loading{display:none;background-color:#932C2A;padding:0.5em 1em;margin:20px 0 0 0;font-size:1.2em;font-weight:700}
 
-#money_header{display:block;width:728px;height:90px;position:absolute;top:10px;left:50%;margin-left:-364px;background-color:rgba(25,25,25,0.9)}
-#money_header h4{color:#2B9664;margin:20px;line-height:25px}
+#money_header{width:728px;height:90px;position:absolute;top:10px;left:50%;margin-left:-364px;background-color:rgba(25,25,25,0.9)}
+#money_header h4,#money_footer h4{color:#2B9664;margin:20px;line-height:25px}
 #money_header a:hover{text-decoration:underline}
+
+#money_footer_container{width:100%;height:110px}
+#money_footer{width:728px;height:90px;position:absolute;left:50%;margin-left:-364px;margin-top:20px;background-image:url("/img/grumpy_ad.jpg")}
 
 #everything{margin:auto;max-width:900px}
 #main{width:100%;margin:110px 0 60px 0}
@@ -77,7 +80,7 @@ table tr:last-child td{border-bottom:0}
 
 @media only screen and (max-width:728px) {
   #loading{margin:20px 0}
-  #money_header{display:none}
+  #money_header,#money_footer_container{display:none}
   #main{width:100%;margin:20px 0 40px 0}
   #kitty_img{display:none;max-width:90%;margin-bottom:20px}
   #progress{height:20px}
