--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-/*! normalize.css v1.1.3 | MIT License | git.io/normalize */
-
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}button,html,input,select,textarea{font-family:sans-serif}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}h2{font-size:1.5em;margin:.83em 0}h3{font-size:1.17em;margin:1em 0}h4{font-size:1em;margin:1.33em 0}h5{font-size:.83em;margin:1.67em 0}h6{font-size:.67em;margin:2.33em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}blockquote{margin:1em 40px}dfn{font-style:italic}hr{-moz-box-sizing:content-box;box-sizing:content-box}mark{background:#ff0;color:#000}p,pre{margin:1em 0}code,kbd,pre,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:after,q:before{content:'';content:none}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}dl,menu,ol,ul{margin:1em 0}dd{margin:0 0 0 40px}menu,ol,ul{padding:0 0 0 40px}nav ol,nav ul{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure,form{margin:0}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}button,html,input,select,textarea{color:#222}html{font-size:1em;line-height:1.4}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}audio,canvas,img,video{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.browsehappy{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}
+/*! normalize.css v3.0.1 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
 
 /* custom styles */
 
@@ -25,15 +23,16 @@ a{color:#fff;text-decoration:none;padding:3px;margin:-3px}
 #main_button{background-color:#2B9664;width:35%}
 #main_button:hover{background-color:#3EB880}
 
-#hidden{display:none;visibility:hidden}
+.hidden{display:none}
 #kitty_img{display:none;max-width:90%;margin:20px 0 0 0}
 #message{padding:20px;background-color:#F7F4F4;display:none}
 #message a{color:#2B9664}
 #message a:hover{text-decoration:underline}
 
-#results_header{text-align:left;display:none;color:#ededed;background-color:rgba(255,255,255,0.1);text-align:center;padding:20px}
-#results_cover{border-radius:50%}
-#results_options{vertical-align:middle;display:inline-block;font-size:13px;text-align:left}
+.results-header{background-color:rgba(255,255,255,0.1);width:100%;display:none}
+#results_header{text-align:left;display:table;color:#ededed;margin:0 auto}
+#results_cover{display:table-cell;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%}
+#results_options{display:table-cell;vertical-align:middle;font-size:13px;text-align:left}
 .option{margin:5px 5px 5px 10px}
 
 table {border-spacing:0;color:#666;width:100%;font-size:13px;text-shadow:1px 1px 0px #fff;background:#eaebec}
@@ -55,21 +54,45 @@ table tr:last-child td{border-bottom:0}
 .popup h2{font-size:1.8em;margin:0.5em 0}
 .popup b{margin-right:10px}
 .popup a{text-decoration:underline;color:inherit}
-.popup p{margin:0.5em 0;font-size:1.1em}
+.popup p{margin:0.5em 0;font-size:1.1em;line-height:1.4em}
 .close_popup{cursor:pointer;float:right;margin-right:-1em}
 
 #donate_div form{display:inline;margin:0}
 
-#footer{text-align:left;color:#fff;position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25,25,25,0.9);font-size:13px;height:40px}
-#social{float:right;padding-right:10%}
-#info{padding-left:10%}
-#info div,#social div{width:70px}
-#footer div>div{display:inline-block;height:40px;text-align:center}
-#footer a{display:block;width:100%;line-height:40px}
+#footer{color:#fff;position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25,25,25,0.9);font-size:13px;height:40px}
+#footer li{
+  list-style-type: none;
+  padding: 0;
+}
+#info {
+  float: left;
+}
+#social {
+  float: right;
+  padding-right: 40px;
+}
+#info,
+#social {
+  margin: 0;
+  max-width: 250px;
+  display: inline-block;
+  width: 100%;
+}
+#footer li {
+  width: 33.333%;
+  width: calc(100%/3);
+  float: left;
+}
+#social li {
+  float: right;
+}
+#footer a{
+  display: block;
+  line-height: 40px;
+  width: 100%;
+}
 #footer a:hover{text-decoration:underline}
-#s1:hover{background-color:#3399DD}
-#s2:hover{background-color:#44619D}
-#s3:hover{background-color:#3AC672}
+
 
 .left{text-align:left}
 .center{text-align:center}
@@ -83,15 +106,12 @@ table tr:last-child td{border-bottom:0}
   #progress{height:20px}
   #main{margin-top:0}
   #main_text,#main_button,#main_form{height:4em}
-  #social{padding-right:20px}
-  #info{padding-left:20px}
+  #info{max-width:100%;padding:0}
 }
 
 @media only screen and (max-width:500px) {
   #footer{text-align:center}
   #social{display:none}
-  #info div{width:32%}
-  #info{padding:0!important}
   #results_table td{font-size:7px;padding:6px}
   .download_buttons{width:60px;font-size:6px}
 }
